--- a/templates/layout.html
+++ b/templates/layout.html
@@ -43,7 +43,8 @@
     </header>
 
     <main role="main" class="container">
-      <div class="row">
+      <div class="row" style = "margin-top:4em">
+        
         <div class="col-md-10">
           {% with messages = get_flashed_messages(with_categories=true) %}
             {% if messages %}
