--- a/static/main.css
+++ b/static/main.css
@@ -1,12 +1,19 @@
 body {
   background: #fafafa;
   color: #333333;
-  margin-top: 5rem;
+  padding-top: 5rem;
 }
 
 h1, h2, h3, h4, h5, h6 {
   color: #444444;
 }
+
+.navbar-dark {
+  padding-top: 0;
+  padding-bottom: 0;
+
+}
+
 .bg-steel {
   background-color: #5f788a;
 }
