--- a/templates/add_final_story.html
+++ b/templates/add_final_story.html
@@ -8,17 +8,17 @@
 {% block content %}
 <div class = "row">
   <div class = "col">
-    <h6>Technology Analytics: {{ tech }}</h6>
-    <p><small><font color="grey">Find stories and milestones.</font></small></p>
+    <h5>You are checking the stories of: {{ tech }} </h5>
   </div>
+
+
   <div class = "col">
     <div class="btn-group btn-group-sm pull-right mt-1" role="group">
-      <a href="{{ url_for('view_scout',log_id = log_id['log_id'], mode = 'analytics') }}" target="_blank" role="button"  class="btn   btn-outline-info  pull-right">Check Basic Info</a>
-      <a href="{{ url_for('task_board_a') }}" role="button"  class="btn   btn-outline-info  pull-right"><small>Back to the Taskboard</small></a>
+      <a href="{{ url_for('edit_final_scout', tech = tech) }}"  target="_blank" role="button"  class="btn   btn-outline-info  pull-right">Check Basic Info</a>
+      <a href="{{ url_for('tech_overview')}}" role="button"  class="btn   btn-outline-info  pull-right">Back to All Techs</a>
     </div>
   </div>
 </div>
-
 
 <hr></hr>
 <div class="container">
@@ -32,7 +32,7 @@
                     <div class="content-section">
                       <div class = "row">
 
-                      <div class = "col-sm-3">
+                      <div class = "col-sm">
                         <div class="form-group">
                                 <b>{{ form.story_year.label(class="form-control-label") }}</b>
                                 <p><small><font color="grey">YYYY</font></small></p>
@@ -49,7 +49,7 @@
 
                         </div>
                       </div>
-                      <div class = "col-sm-3">
+                      <div class = "col-sm">
                         <div class="form-group">
                                 <b>{{ form.story_date.label(class="form-control-label") }}</b>
                                 <p><small><font color="grey">MM/DD (or blank)</font></small></p>
@@ -64,9 +64,8 @@
                                     {{ form.story_date(class="form-control form-control-lg") }}
                                 {% endif %}
                         </div>
-
                       </div>
-                      <div class = "col-sm-6">
+                      </div>
                         <div class="form-group">
                                 <b>{{ form.milestone.label(class="form-control-label") }}</b>
                                 <p><small><font color="grey">Is this a milestone story? Input "None" if not.</font></small></p>
@@ -81,8 +80,7 @@
                                     {{ form.milestone(class="form-control form-control-lg") }}
                                 {% endif %}
                         </div>
-                        </div>
-                        </div>
+
                         <div class="form-group">
                                 <b>{{ form.story_content.label(class="form-control-label") }}</b>
                                 <p><small><font color="grey">The content of the story.</font></small></p>
@@ -132,48 +130,3 @@
 
                 </div>
             </div>
-
-            <div>
-                <h5>Current Progress</h5>
-                <table id="example" class="table table-responsive-sm" >
-                  <thead>
-                      <tr>
-
-                          <th>Year</th>
-                          <th>Story Content</th>
-                          <th>Milestone</th>
-                          <th>Contributor</th>
-                          <th>Submit Time</th>
-                          <th> </th>
-                          <!-- <th> </th> -->
-                      </tr>
-                  </thead>
-                  {% for story in stories %}
-                  <tbody>
-                      <tr>
-
-
-                          <td>{{ story['story_year'] }}</td>
-                          <td>{{ story['story_content'] }}</td>
-                          <td>{{ story['milestone'] }}</td>
-                          <td>{{ story['contributor_name'] }}</td>
-                          <td>{{ story['contribute_time'] }}</td>
-                          <td>
-                            <a href = "{{ url_for('view_log', log_s_id= story['log_s_id']) }}" role="button"  class="btn btn-outline-info  ">View & Edit</a>
-                          </td>
-                          <!-- <td>
-                            <a href = "{{ url_for('edit_log', log_s_id= story['log_s_id'], mode='edit' ) }}" role="button"  class="btn {% if story['contributor_id'] == user['user_id'] or user['can_edit'] == 1%} btn-outline-info {% else %} btn-outline-secondary disabled {% endif %}">Edit</a>
-                          </td> -->
-                      </tr>
-                  </tbody>
-                  {% endfor %}
-                </table>
-            </div>
-
-
-
-
-
-
-
-{% endblock content %}
