--- a/templates/edit_final_scout.html
+++ b/templates/edit_final_scout.html
@@ -16,7 +16,16 @@
   <div div class="col-lg-12">
     <div class = "row">
       <div class = "col">
-        <h5>You are editing the tech scout of: {{ scout['name'] }} </h5>
+        <h5>You are editing: {{ scout['name']}} </h5>
+      </div>
+      <div class = "col">
+        <div class="btn-group btn-group-sm pull-right mt-1" role="group">
+          <a href="{{ url_for('view_all_final_stories', tech=scout['name'])  }}" role="button"  class="btn   btn-outline-info  pull-right">Check Stories</a>
+          <a href="{{ url_for('tech_overview')}}" role="button"  class="btn   btn-outline-info  pull-right">Back to All Techs</a>
+        </div>
+      </div>
+    </div>
+    <hr></hr>
 
 
 
