--- a/templates/home.html
+++ b/templates/home.html
@@ -10,7 +10,7 @@
 {% block content %}
 <!-- <h1>Tech</h1> -->
 
-<div class="row" style = "margin-bottom: 15px; margin-top: 15px">
+<div class="row">
 
 	<div class="col-sm-4">
 		 <a class="list-group-item" href="{{ url_for('tech_scout') }}">Tech Scout</a>
