--- a/templates/login.html
+++ b/templates/login.html
@@ -49,8 +49,8 @@
         </form>
     </div>
     <div class="border-top pt-3">
-        <small class="text-muted">
+        <h5 class="text-muted">
             Need An Account? <a class="ml-2" href="{{ url_for('register') }}">Sign Up Now</a>
-        </small>
+        </h5>
     </div>
 {% endblock content %}
