--- a/templates/view_log.html
+++ b/templates/view_log.html
@@ -17,12 +17,14 @@
     <div class = "col">
       <div class="btn-group btn-group-sm pull-right mt-1" role="group">
         {% if mode == 'edit' %}
-          <a href="{{ url_for('commit_story', log_s_id = story['log_s_id']) }}" role="button"  class="btn {% if user['can_edit'] == 0 or scout['change_committed'] %}  btn-outline-secondary disabled {% else %} btn-outline-info {% endif %}">Confirm & Commit</a>
+          <a href="{{ url_for('commit_story', log_s_id = story['log_s_id']) }}" role="button"  class="btn {% if user['can_edit'] == 0 or story['change_committed'] %}  btn-outline-secondary disabled {% else %} btn-outline-info {% endif %}">Confirm & Commit</a>
+          <a href="{{ url_for('view_all_stories', tech = story['tech_name']) }}" role="button"  class="btn   btn-outline-info  pull-right">Back to Stories</a>
         {% else %}
           <a href="{{ url_for('tech_analytics', tech=story['tech_name']) }}" role="button"  class="btn btn-outline-info ">Analysis & Add Stories</a>
+          <a href="{{ url_for('tech_analytics', tech = story['tech_name']) }}" role="button"  class="btn   btn-outline-info  pull-right">Back to Analytics Page</a>
         {% endif %}
 
-        <a href="{{ url_for('tech_analytics', tech = story['tech_name']) }}" role="button"  class="btn   btn-outline-info  pull-right">Back to Analytics Page</a>
+
       </div>
     </div>
   </div>
@@ -30,6 +32,22 @@
 
 
 <div div class="cw-100">
+
+  <div class = "content-section">
+    <div class = "row">
+      <div class = "col">
+          <b>Technology: </b>
+          <p><small><font color="grey">{{ story['tech_name']}}</font></small></p>
+      </div>
+      {% if user['admin'] == 1 %}
+      <div class = "col">
+        <a href="{{ url_for('update_entry', table = 'tech_story_log', colname = 'tech_name', idcol = 'log_s_id', row_id = story['log_s_id'], type = 'Integer', mode = mode) }}" role="button"  class="btn-outline-info pull-right mt-1">Edit</a>
+
+      </div>
+      {% endif %}
+    </div>
+  </div>
+
     <div class = "content-section">
       <div class = "row">
         <div class = "col">
@@ -54,7 +72,7 @@
           </div>
           {% if user['can_edit'] == 1 or user['user_id'] == story['contributor'] %}
           <div class = "col">
-            <a href="{{ url_for('update_entry', table = 'tech_story_log', colname = 'story_date', idcol = 'log_s_id', row_id = story['log_s_id'], type = 'Date', mode = mode) }}" role="button"  class="btn-outline-info pull-right mt-1">Edit</a>
+            <a href="{{ url_for('update_entry', table = 'tech_story_log', colname = 'story_date', idcol = 'log_s_id', row_id = story['log_s_id'], type = 'Text', mode = mode) }}" role="button"  class="btn-outline-info pull-right mt-1">Edit</a>
 
           </div>
           {% endif %}
@@ -96,7 +114,9 @@
     <div class = "row">
       <div class = "col">
         <b>Sources:</b>
-        <p><small><font color="grey">{{ story['sources']}}</font></small></p>
+        <div class = "d-sm-flex flex-wrap">
+        <p ><small><font color="grey">{{ story['sources']}}</font></small></p>
+        </div>
       </div>
       {% if user['can_edit'] == 1 or user['user_id'] == story['contributor'] %}
       <div class = "col">
